
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.erhudy.goboolstr;

// Package-wide variables from generator "generated".
option go_package = "github.com/erhudy/goboolstr";

// +protobuf=true
// +protobuf.options.(gogoproto.goproto_stringer)=false
message BoolOrString {
  optional bool type = 1;

  optional bool boolVal = 2;

  optional string strVal = 3;
}

